--- a/dogs/dogs.html
+++ b/dogs/dogs.html
@@ -2,6 +2,7 @@
   <head>
     <title>Dogs</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="icon" href="../favicon.gif" type="image/gif" >
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="dogs.css">
   </head>
