--- a/cats/cats.html
+++ b/cats/cats.html
@@ -2,6 +2,7 @@
   <head>
     <title>Cats</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="icon" href="../favicon.gif" type="image/gif" >
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="cats.css">
   </head>
