--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>oof</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="icon" href="favicon.gif" type="image/gif" >
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
