--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <p>This is a website made for fun by Hunter Munts.</p>
       <div class="links">
         <a href=palindrome/palindrome.html class="link">Palindromes</a>
+        <a href=copypasta/copypasta.html class="link">Copypastas</a>
         <a href=dogs/dogs.html class="link">Dogs</a>
         <a href=cats/cats.html class="link">Cats</a>
       </div>
