--- a/copypasta/copypasta.html
+++ b/copypasta/copypasta.html
@@ -3,29 +3,10 @@
     <title>oof</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="icon" href="favicon.gif" type="image/gif" >
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
     <h1>Copypastas</h1>
-    <div class="seperator"></div>
-    <p>⠀⠀⠀⠀⠀⠀⠀⠀⠀⣤⣤
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿
-⠀⠀⣶⠀⠀⣀⣤⣶⣤⣉⣿⣿⣤⣀
-⠤⣤⣿⣤⣿⠿⠿⣿⣿⣿⣿⣿⣿⣿⣿⣀
-⠀⠛⠿⠀⠀⠀⠀⠉⣿⣿⣿⣿⣿⠉⠛⠿⣿⣤
-⠀⠀⠀⠀⠀⠀⠀⠀⠿⣿⣿⣿⠛⠀⠀⠀⣶⠿
-⠀⠀⠀⠀⠀⠀⠀⠀⣀⣿⣿⣿⣿⣤⠀⣿⠿
-⠀⠀⠀⠀⠀⠀⠀⣶⣿⣿⣿⣿⣿⣿⣿⣿
-⠀⠀⠀⠀⠀⠀⠀⠿⣿⣿⣿⣿⣿⠿⠉⠉
-⠀⠀⠀⠀⠀⠀⠀⠉⣿⣿⣿⣿⠿
-⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⠉
-⠀⠀⠀⠀⠀⠀⠀⠀⣛⣿⣭⣶⣀
-⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⠉⠛⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⠀⠀⣿⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣉⠀⣶⠿
-⠀⠀⠀⠀⠀⠀⠀⠀⣶⣿⠿
-⠀⠀⠀⠀⠀⠀⠀⠛⠿⠛</p>
     <div class="seperator"></div>
     <p>In west Cincinnati I was born and raised on the zoo grounds is where i spent most of my days, Chillin out hanging out acting all cool, eating bananas out by the pool, When a mom and her kid, they were up to no good, crawled over the fence into my neighborhood, I got in one little fight and my zoo keeper got scared, heard a gun shot just before I stopped breathing air...</p>
     <div class="seperator"></div>
