--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <a href=cats/cats.html class="link">Cats</a>
       </div>
       <div class="seperator"></div>
-      <img src="stuw.png" alt="">
+      <img id="randImage" src="shag/stuw.png" alt="">
       <div class="seperator"></div>
-      <p id="test">le cwoisent</p>
+      <p>le cwoisent</p>
       <p>(c) No rights reserved.</p>
     </div>
   </body>
