--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>oof</title>
@@ -6,20 +7,20 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="container">
-      <h1>Hello World!</h1>
-      <p>This is a website made for fun by Hunter Munts.</p>
-      <div class="links">
-        <a href=palindrome/palindrome.html class="link">Palindromes</a>
-        <a href=copypasta/copypasta.html class="link">Copypastas</a>
-        <a href=dogs/dogs.html class="link">Dogs</a>
-        <a href=cats/cats.html class="link">Cats</a>
-      </div>
-      <div class="seperator"></div>
-      <img id="randImage" src="shag/stuw.png" alt="">
-      <div class="seperator"></div>
-      <p>le cwoisent</p>
-      <p>(c) No rights reserved.</p>
+    <h1>Hello World!</h1>
+    <p>This is a website made for fun by Hunter Munts.</p>
+    <div class="links">
+      <a href=palindrome/palindrome.html class="link">Palindromes</a>
+      <a href=copypasta/copypasta.html class="link">Copypastas</a>
+      <a href=dogs/dogs.html class="link">Dogs</a>
+      <a href=cats/cats.html class="link">Cats</a>
     </div>
+    <div class="seperator"></div>
+    <img id="randImage" src="dogs/doggo3.jpg" class="randImage">
+    <div class="seperator"></div>
+    <p>le cwoisent</p>
+    <p>(c) No rights reserved.</p>
   </body>
+  <script type="text/javascript" src="scripts.js"></script>
+  <script type="text/javascript" src="background.js"></script>
 </html>
