--- a/dogs/dogs.html
+++ b/dogs/dogs.html
@@ -10,7 +10,7 @@
     <h1>Dogs</h1>
     <div class="seperator"></div>
     <div class="dogs">
-      <img class="dog1" src="doggo.jpg">
+      <img class="dog1" src="doggo.jpg" title="Found a secret">
       <img class="dog1" src="doggo2.jpg">
       <img class="dog1" src="doggo3.jpg">
       <img class="dog2" src="doggo4.jpg">
