--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href=cats/cats.html class="link">Cats</a>
     </div>
     <div class="seperator"></div>
-    <!-- <img id="randImage" src="" class="randImage"> -->
+    <img id="randImage" src="" class="randImage">
     <div class="seperator"></div>
     <p>le cwoisent</p>
     <p>(c) No rights reserved.</p>
